# PureCLIP

./: .gitignore  .travis.yml  README.md
docs/: Makefile  SimulationFramework.rst  conf.py  index.rst
docs/GettingStarted/: index.rst  preprocessing.rst  requirements.rst
docs/PhD-week_tutorial/: basicMode.rst  incorporateInput.rst  incorporateInputAndCLmotifs.rst  index.rst  preprocessing.rst  sshmm.rst
docs/Project/: index.rst
docs/PureCLIPTutorial/: basicMode.rst  customCLmotifs.rst  faqs.rst  incorporateCLmotifs.rst  incorporateInput.rst  index.rst  output.rst  userOptions.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/GettingStarted/: index.doctree  preprocessing.doctree  requirements.doctree
docs/_build/doctrees/Project/: index.doctree
docs/_build/doctrees/PureCLIPTutorial/: basicMode.doctree  faqs.doctree  incorporateCLmotifs.doctree  incorporateInput.doctree  index.doctree  output.doctree  userOptions.doctree
docs/_build/doctrees/_themes/sphinx_rtd_theme/: README.doctree
docs/_build/doctrees/_themes/sphinx_rtd_theme/demo_docs/source/: api.doctree  demo.doctree  index.doctree  lists_tables.doctree  long.doctree  structure.doctree
docs/_build/doctrees/_themes/sphinx_rtd_theme/tests/roots/test-basic/: bar.doctree  foo.doctree  index.doctree
docs/_build/doctrees/_themes/sphinx_rtd_theme/tests/roots/test-empty/: index.doctree
docs/_build/doctrees/_themes/sphinx_rtd_theme/tests/roots/test-missing-toctree/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/GettingStarted/: index.html  preprocessing.html  requirements.html
docs/_build/html/Project/: index.html
docs/_build/html/PureCLIPTutorial/: basicMode.html  faqs.html  incorporateCLmotifs.html  incorporateInput.html  index.html  output.html  userOptions.html
docs/_build/html/_sources/PureCLIPTutorial/: incorporateCLmotifs.rst.txt  index.rst.txt  output.rst.txt
docs/_build/html/_themes/sphinx_rtd_theme/: README.html
docs/_build/html/_themes/sphinx_rtd_theme/demo_docs/source/: api.html  demo.html  index.html  lists_tables.html  long.html  structure.html
docs/_build/html/_themes/sphinx_rtd_theme/tests/roots/test-basic/: bar.html  foo.html  index.html
docs/_build/html/_themes/sphinx_rtd_theme/tests/roots/test-empty/: index.html
docs/_build/html/_themes/sphinx_rtd_theme/tests/roots/test-missing-toctree/: index.html
pkg/: README
src/: CMakeLists.txt  call_sites.h  call_sites_replicates.h  density_functions.h  density_functions_crosslink.h  density_functions_crosslink_reg.h  density_functions_reg.h  hmm_1.h  parse_alignments.h  prepro_mle.h  pureclip.cpp  util.h  winextract.cpp
src/cmake/: Boost.cmake  SeqAn.cmake
util/: compute_CLmotif_scores.sh  pkg_check.py
